--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
       });
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
